# LabelGeniusDocker

./: .dockerignore  Dockerfile.cpu  Dockerfile.cuda  README.md  compose.yaml  pyproject.toml
.github/workflows/: docker.yml
labelgenius/: LabelGenius.py  cli.py
